2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-09-17  Andreas Kupries  <andreask@activestate.com>

	* csv.man: [Bug 2860843]. Fixed two documentation typos reported
	  by Larry Virden <lvirden@users.sourceforge.net>

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-02  Andreas Kupries  <andreask@activestate.com>

	* csv.tcl: Fixed [SF Bug 2123513]. Added protections against
	* csv.man: malformed separator characters (empty or string) to the
	* csv.test: read2 and split2 commands. Extended test suite to
	* pkgIndex.tcl: cover these cases. Bumped the package version to
	  0.7.1.

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.pcx: New file. Syntax definitions for the public commands of
	  the csv package.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* csv.man: Bumped version to 0.7.
	* csv.tcl:
	* pkgIndex.tcl

2006-06-15  Andreas Kupries <andreask@activestate.com>

	* csv.tcl:  Extended csv processing to allow different
	* csv.test: quoting chars beyond double-quote. Patch origin at [SF
	* csv.man:  Tcllib Patch 1469593]. Needed small fix in
	  join. Extended testsuite, documentation.
